# Learning-To-Rank-for-Search

./: .gitignore  LMIR.ipynb  TF-IDFvsBM25.ipynb  VSM.ipynb
Basics of LTR/notebooks/: 02_LMIR.ipynb
Basics of LTR/src/: __init__.py  data_loader.py  visualization.py
LTR/: pyproject.toml
LTR/ltr_results/: lambdarank_results.json
LTR/notebooks/: 01_pointwise.ipynb  02_ranknet.ipynb  03_lambdarank.ipynb  04_comparison.ipynb
LTR/src/: data.py  evaluate.py
LTR/src/ltr/: __init__.py  losses.py  metrics.py  train.py
Pairwise Approaches/: README.md  pyproject.toml
Pairwise Approaches/ltr/: data_mslr.py  evaluate.py  losses.py  models(Neural Networks).py  train.py
Pairwise Approaches/ltr_results/: lambdamart_results.json  pointwise_results.json  ranknet_results.json
Pairwise Approaches/ltr_results(mslr)/: pointwise_results.json
Pairwise Approaches/notebooks/: 01_pointwise.ipynb  02_ranknet.ipynb  03_lambdarank.ipynb  04_comparison.ipynb  04_lambdamart.ipynb  05_lambdamart.ipynb  MSLR.ipynb  comparison.ipynb
Pairwise Approaches/notebooks(MSLR)/: 01_ranknet.ipynb  02_pointwise.ipynb  MSLR.ipynb
week2/: README.md  requirements.txt
week2/notebooks/: 01_TF-IDFvsBM25.ipynb  03_VSM.ipynb
week2/results/: leaderboard.md
week2/src/: evaluation.py
week3/: .gitignore  README.md  requirements.txt
week3/notebooks/: RankNet.ipynb
week3/src/: __init__.py  data.py  evaluate.py  loss.py  model.py  train.py  utils.py
week4/: .gitignore  README.md
week4/notebooks/: LambdaRank.ipynb  Pointwise.ipynb
week4/src/: dataset.py  lambdarank.py  pointwise.py
(+3 files in other folders)
